@@ -5,6 +5,7 @@ Revision history for Perl extension Net::SSLeay.
      Fixed incorrect documentation about the best way to call CTX_set_options.
      Fixed problem that caused Undefined subroutine utf8::encode @
      t/local/33_x509_create_cert.t (on perl 5.6.2). Thanks to kmx.
+     In examples and pod documentations, changed #!/usr/local/bin/perl to #!/usr/bin/perl.
 
 1.47 2012-04-04
      Fixed overlong lines in pod, patch from Salvatore Bonaccorso, Debian Perl
